--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
+
     <!-- App Scripts -->
+    <script src="firebase-config.js"></script>
+    <script src="config-service.js"></script>
+    <script src="messages-service.js"></script>
     <script src="config.js"></script>
     <script src="app.js"></script>
 </body>
